Bugzilla Bug 2678 (https://bugs.freedesktop.org/show_bug.cgi?id=2678) Patch     #2051 (https://bugs.freedesktop.org/attachment.cgi?id=2051) lbxproxy     core dumps on exit if clients have had authentication failures (Sun bug     #5074303 - Fix by Derek Wang <derek.wang@sun.com>)